--- a/src/app/components/event/header/header.component.html
+++ b/src/app/components/event/header/header.component.html
@@ -1,10 +1,12 @@
-<mat-card-header>
-  <app-user-profile [pubkey]="event().pubkey">
+<mat-card-header [class.compact]="compact()">
+  <app-user-profile [pubkey]="event().pubkey" [view]="compact() ? 'compact' : 'list'">
     <a class="date-link" [routerLink]="eventUrl()" [title]="event().created_at * 1000 | date: 'medium'" tabindex="0"
       (click)="openEventAndStopPropagation($event)" (keyup.enter)="layout.openEvent(event().id, event())"
       (keyup.space)="layout.openEvent(event().id, event())">
       {{ event().created_at | ago }}
     </a>
+    @if (!compact()) {
     <app-event-menu [event]="event()"></app-event-menu>
+    }
   </app-user-profile>
 </mat-card-header>
